<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ui.view.fragment.home.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/profile_image_button"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:background="@null"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_menu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/deliver_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="@dimen/_11ssp"
                    android:textColor="@color/orange"
                    android:layout_marginStart="@dimen/_12sdp"
                    app:layout_constraintBottom_toTopOf="@id/address_spinner"
                    app:layout_constraintStart_toEndOf="@+id/profile_image_button"
                    app:layout_constraintTop_toTopOf="@+id/profile_image_button" />

                <Spinner
                    android:id="@+id/address_spinner"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="@dimen/_10ssp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:gravity="start|center_vertical"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_image_button"
                    app:layout_constraintStart_toEndOf="@+id/profile_image_button"
                    app:layout_constraintTop_toBottomOf="@+id/deliver_textview" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/chef_shapeable_imageview"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/profile_image_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/profile_image_button"
                    app:shapeAppearance="@style/CircleImage" />

                <LinearLayout
                    android:id="@+id/running_order_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/order_container_background"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_7sdp"
                    app:layout_constraintEnd_toStartOf="@+id/request_order_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/address_spinner">

                    <TextView
                        android:id="@+id/running_order_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textSize="@dimen/_45ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="23" />

                    <TextView
                        android:id="@+id/running_order_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/running_orders"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/request_order_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/order_container_background"
                    android:orientation="vertical"
                    android:padding="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    app:layout_constraintStart_toEndOf="@id/running_order_container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/address_spinner">

                    <TextView
                        android:id="@+id/request_order_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textSize="@dimen/_45ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="23" />

                    <TextView
                        android:id="@+id/request_order_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/request_orders"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/statistic_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:padding="@dimen/_12sdp"
                    android:background="@drawable/order_container_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/running_order_container">

                    <TextView
                        android:id="@+id/revenue_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/total_revenue" />

                    <TextView
                        android:id="@+id/revenue_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintEnd_toEndOf="@+id/revenue_title_textview"
                        app:layout_constraintStart_toStartOf="@+id/revenue_title_textview"
                        app:layout_constraintTop_toBottomOf="@+id/revenue_title_textview"
                        tools:text="$2301" />

                    <Spinner
                        android:id="@+id/map_mode_spinner"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/spinner_background"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="start|center_vertical"
                        android:padding="@dimen/_5sdp"
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/revenue_textview"
                        app:layout_constraintEnd_toStartOf="@+id/detail_title_textview"
                        app:layout_constraintStart_toEndOf="@+id/revenue_title_textview"
                        app:layout_constraintTop_toTopOf="@+id/revenue_title_textview"
                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/detail_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/see_details"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ui.view.custom.CustomMap
                        android:id="@+id/map_view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/revenue_textview" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/review_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:padding="@dimen/_12sdp"
                    android:background="@drawable/order_container_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/statistic_container">

                    <TextView
                        android:id="@+id/review_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:textSize="@dimen/_11ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/reviews" />

                    <TextView
                        android:id="@+id/all_review_title_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/see_details"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/rating_imageview"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:importantForAccessibility="no"
                        android:src="@drawable/ic_star"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/review_title_textview" />

                    <TextView
                        android:id="@+id/rating_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_15ssp"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/_5sdp"
                        app:layout_constraintBottom_toBottomOf="@+id/rating_imageview"
                        app:layout_constraintStart_toEndOf="@+id/rating_imageview"
                        app:layout_constraintTop_toTopOf="@+id/rating_imageview"
                        tools:text="4.8" />

                    <TextView
                        android:id="@+id/review_quantity_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:gravity="center"
                        android:textSize="@dimen/_10ssp"
                        android:letterSpacing="0.05"
                        app:layout_constraintHorizontal_bias="0.15"
                        app:layout_constraintBottom_toBottomOf="@+id/rating_textview"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/rating_textview"
                        app:layout_constraintTop_toTopOf="@+id/rating_textview"
                        tools:text="Totals 23 Reviews" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>